# eris

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  squarecloud.app
bot/: core.py
bot/extensions/: api.py  events.py  meta.py  support.py
bot/utils/: context.py  embed.py  fuzzy.py
config/: .env.example
docker/: Dockerfile
