[tool.poetry]
name = "eris"
version = "0.1.0"
description = "A Discord bot that provides RTFM features."
authors = ["kyomi <me@kyomi.dev>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
discord-py = "^2.3.2"
jishaku = "^2.5.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
